glib: fix g_reload_user_special_dirs_cache

We handle a special case for G_USER_DIRECTORY_DESKTOP
when we init the values but drop it when we reload them.
Fix this by preferring old values to NULL

https://bugzilla.gnome.org/show_bug.cgi?id=676594

Signed-off-by: Marc-Antoine Perennou <Marc-Antoine@Perennou.com>